# nyro-reasoning-fix

./: AGENTS.md  BUILD_INSTRUCTIONS.md  CHANGELOG.md  CHANGELOG_CN.md  Cargo.toml  Makefile
.github/workflows/: ci.yml  release-server.yml
crates/nyro-core/: Cargo.toml
crates/nyro-core/src/: config.rs  error.rs  lib.rs
crates/nyro-core/src/admin/: api_keys.rs  auth_data.rs  import_export.rs  mod.rs  model_catalog.rs  oauth.rs  observability.rs  providers.rs  route_data.rs  routes.rs  session_tests.rs  settings.rs
crates/nyro-core/src/auth/: mod.rs  registry.rs  types.rs
crates/nyro-core/src/cache/: backend.rs  vector.rs
crates/nyro-core/src/crypto/: mod.rs
crates/nyro-core/src/db/: mod.rs  (+1 more)
crates/nyro-core/tests/: admin.rs  logging_spec.rs  passthrough_fidelity.rs  protocol_conversion.rs  protocol_gate.rs  protocol_migration.rs  protocol_registry.rs  provider_protocols.rs  vendor_registry.rs
crates/nyro-tools/: Cargo.toml
crates/nyro-tools/src/: fixture.rs  protocol.rs  proxy.rs  record.rs  replay.rs  scenarios.rs
docs/: fix-mlx-reasoning-field-name.md
docs/design/: architecture.md
docs/design/ir/: CHANGELOG.md  FIELD_HOMING.md  README.md
docs/standalone/: README.md
src-server/src/: admin_routes.rs  main.rs  yaml_config.rs
src-tauri/: tauri.conf.json
src-tauri/src/: commands.rs  lib.rs
tests/e2e/storage/: conftest.py
webui/: package.json
webui/src/components/: log-detail-dialog.tsx
webui/src/lib/: backend.ts  format.ts  protocol.ts  types.ts
webui/src/pages/: connect.tsx  logs.tsx  providers.tsx  routes.tsx  settings.tsx
(+126 files in other folders)
